# dagster-polars

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  shell.nix  tox.ini
.github/workflows/: check.yml  ci.yml  release.yml
dagster_polars/: __init__.py  _version.py  base_io_manager.py  parquet.py  types.py
dagster_polars/io_managers/: base.py  bigquery.py  csv.py  delta.py  parquet.py  utils.py
docs/: examples.md
tests/: __init__.py  conftest.py  example.py  test_deltalake.py  test_polars_delta.py  test_polars_parquet.py  test_upath_io_managers.py  test_upath_io_managers_lazy.py  utils.py
