[tool.poetry]
name = "dagster-polars"
version = "0.0.0"
description = ""
authors = ["Daniel Gafni"]
readme = "README.md"
packages = [{include = "dagster_polars"}]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.3.8"
polars = ">=0.15.0"
pyarrow = ">=8.0.0"


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.77.0"
pytest = "^7.3.1"
deepdiff = "^6.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"
pyright = "^1.1.313"
black = "^23.3.0"
tox = "^4.6.0"
tox-gh = "^1.0.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["dagster_polars", "tests"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  )/
'''

[tool.ruff]
line-length = 120
src = [
    "dagster_polars",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.isort]
known-first-party = ["dagster_polars", "tests"]

[tool.pyright]
reportPropertyTypeMismatch = true
reportImportCycles = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

include = [
    "dagster_polars",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
