[tool.poetry]
name = "dagster-polars"
version = "0.0.0"
description = "Dagster integration library for Polars"
authors = [
    "Daniel Gafni <danielgafni16@gmail.com>",
    "Edgar Bahilo <edgbr@proton.me>"
]
readme = "README.md"
packages = [{include = "dagster_polars"}]
repository = "https://github.com/danielgafni/dagster-polars"
keywords = [
    "dagster",
    "polars",
    "ETL",
    "dataframe",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.4.0"
polars = ">=0.20.1"
pyarrow = ">=8.0.0"
typing-extensions = "^4.7.1"

deltalake = { version = ">=0.14.0", optional = true }
dagster-gcp = { version = ">=0.19.5", optional = true }
universal-pathlib = "^0.1.4"


[tool.poetry.extras]
gcp = ["dagster-gcp"]
deltalake = ["deltalake"]


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.89.0"
pytest = "^7.3.1"
deepdiff = "^6.3.0"
isort = "^5.12.0"
ruff = "^0.1.3"
pyright = "^1.1.313"
tox = "^4.6.0"
tox-gh = "^1.0.0"
pre-commit = "^3.3.2"
dagit = "^1.3.9"
black = "^23.3.0"
pytest-cases = "^3.6.14"
blacken-docs = "^1.16.0"
pytest-rerunfailures = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
strict = false
vcs = "git"
style = "pep440"
dirty = true
bump = true
metadata = false

[tool.poetry-dynamic-versioning.substitution]
files = [
    "pyproject.toml",
    "dagster_polars/_version.py"
]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["dagster_polars", "tests"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  )/
'''

[tool.ruff]
extend-select = ["I"]
line-length = 120
src = [
    "dagster_polars",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.isort]
known-first-party = ["dagster_polars", "tests"]

[tool.pyright]
reportPropertyTypeMismatch = true
reportImportCycles = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

include = [
    "dagster_polars",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
